    This is a breaking change, but the module has been out less than a month.
  - New method Span->append_to, and normalize Span->copy_to to overwrite.
    This is a breaking change in that ->copy_to used to append to SecretBuffer
    but overwrite scalars.  Now copy_to overwrites for both destination types
    and append_to appends to both destination types.

Version 0.017 - 2025-12-28
  - New features for append_console_line: char_mask, char_count, char_class
  - New attribute 'line_input' for ConsoleState toggles line buffering
  - New method Span->set_up_us_the_bom processes byte-order-marks
  - Return value of memcmp is now normalized to -1/0/1

Version 0.016 - 2025-12-27
  - New append_console_line(prompt => $txt) feature resolves race condition
    between printing prompt and disabling echo
  - New Crypt::SecretBuffer::ConsoleState utility class lets users disable
    TTY echo more flexibly
  - Fix bug where ->sysread was actually calling the ->read implementation
  - Fix Win32 compatibility (compile errors in 0.013 - 0.015)
  - Fix TTY tests on BSD (race condition in append_console_line)

Version 0.015 - 2025-12-22
  - Fix 5.8 and C89 compatibility

Version 0.014 - 2025-12-22
  - Fix MULTIPLICITY (ithreads) support

Version 0.013 - 2025-12-21
  - New method $span->cmp($other) is like memcmp but on Unicode codepoints
  - Span objects now also have overloaded cmp, stringify, and boolean cast
  - New PEM parser class

Version 0.012 - 2025-12-19
  - String patterns passed to scanning functions (scan, index, rindex, and
    various methods of Span) can now be perl unicode strings, or SecretBuffer
    objects, or Span objects (with their own encoding) and matches will be
    compared codepoint by codepoint.
  - Added BASE64 encoding
  - New exportable memcmp function, and method of SecretBuffer and Span objects
  - Exceptions in unmask_to and unmask_secrets_to now pass through to caller
    more correctly.